--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                     </div>
     </div>
 <div class="redimline">
-<h1 class="dstext">Discord</h1>
+<h1 class="dstext" style="cursor:pointer">
+    <a href="https://discord.gg/dCWrRZknMB">Discord</a>
+    </h1>
 </div>
 <div class="menline"></div>
 <div class="menlineb">
