--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="menubox">
     <h1 class="gameinfo">Game Info</h1>
     <div class="infobutton">
-    <h1 class="infobtext" style ="left: 21px">Developers</h1>
+    <h1 class="infobtext" style ="left: 21px" href="tt">Developers</h1>
     </div>
     <div class="infobutton" style="top:200px">
         <h1 class="infobtext" style ="left: 15px">About Game</h1>
