--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
     <div class="menubox">
     <h1 class="gameinfo">Game Info</h1>
     <div class="infobutton">
-    <h1 class="infobtext" style ="left: 21px" href="tt">Developers</h1>
+    <h1 class="infobtext" style ="left: 21px">
+        <a href="https://tekloro-pj.netlify.app/Opps">Developers</a>
+        </h1>
     </div>
     <div class="infobutton" style="top:200px">
-        <h1 class="infobtext" style ="left: 15px">About Game</h1>
+        <h1 class="infobtext" style ="left: 15px">
+            <a href="https://tekloro-pj.netlify.app/Opps">About Game</a>
+        </h1>
         </div>
         <div class="infobutton" style="top:300px">
             <h1 class="infobtext" style ="left: 45px">
-                <a href="https://tekloro-pj.herokuapp.com/Tanks/Tanks.php">Tanks</a></h1>
+                <a href="https://tekloro-pj.netlify.app/Opps">Tanks</a>
+            </h1>
             </div>
             <div class="statusbox" id="gradientanmin">
             </div>
@@ -41,13 +46,19 @@
             </div>
     <!--Beta buttons-->
     <div class="infobutton" style="left: 450px">
-        <h1 class="infobtext" style ="left: 15px">GameModes</h1>
+        <h1 class="infobtext" style ="left: 15px">
+            <a href="https://tekloro-pj.netlify.app/Opps">GameModes</a>
+        </h1>
         </div>
         <div class="infobutton" style="top:200px; left: 450px" >
-            <h1 class="infobtext" style ="left: 37px">Discord</h1>
+            <h1 class="infobtext" style ="left: 37px">
+                <a href="https://tekloro-pj.netlify.app/Opps">Discord</a>
+            </h1>
             </div>
             <div class="infobutton" style="top:300px; left: 450px">
-                <h1 class="infobtext" style ="left: 38px">support</h1>
+                <h1 class="infobtext" style ="left: 38px">
+                    <a href="https://tekloro-pj.netlify.app/Opps">support</a>
+                </h1>
                 </div>
                 <div class="infobuttontek" style="top:400px; left: 245px">
                     <h1 class="infobtext" style ="left: 30px" id="Texxt">Arras3D.io</h1>
