--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <h1 class="gameinfo">Game Info</h1>
     <div class="infobutton">
     <h1 class="infobtext" style ="left: 21px">
-        <a href="https://tekloro-pj.netlify.app/Opps">Developers</a>
+        <a href="https://tekloro-pj.netlify.app/Opps/Remove">Developers</a>
         </h1>
     </div>
     <div class="infobutton" style="top:200px">
         <h1 class="infobtext" style ="left: 15px">
-            <a href="https://tekloro-pj.netlify.app/Opps">About Game</a>
+            <a href="https://tekloro-pj.netlify.app/Opps/Remove">About Game</a>
         </h1>
         </div>
         <div class="infobutton" style="top:300px">
             <h1 class="infobtext" style ="left: 45px">
-                <a href="https://tekloro-pj.netlify.app/Opps">Tanks</a>
+                <a href="https://tekloro-pj.netlify.app/Opps/Remove">Tanks</a>
             </h1>
             </div>
             <div class="statusbox" id="gradientanmin">
@@ -47,17 +47,17 @@
     <!--Beta buttons-->
     <div class="infobutton" style="left: 450px">
         <h1 class="infobtext" style ="left: 15px">
-            <a href="https://tekloro-pj.netlify.app/Opps">GameModes</a>
+            <a href="https://tekloro-pj.netlify.app/Opps/Remove">GameModes</a>
         </h1>
         </div>
         <div class="infobutton" style="top:200px; left: 450px" >
             <h1 class="infobtext" style ="left: 37px">
-                <a href="https://tekloro-pj.netlify.app/Opps">Discord</a>
+                <a href="https://tekloro-pj.netlify.app/Opps/Remove">Discord</a>
             </h1>
             </div>
             <div class="infobutton" style="top:300px; left: 450px">
                 <h1 class="infobtext" style ="left: 38px">
-                    <a href="https://tekloro-pj.netlify.app/Opps">support</a>
+                    <a href="https://tekloro-pj.netlify.app/Opps/Remove">support</a>
                 </h1>
                 </div>
                 <div class="infobuttontek" style="top:400px; left: 245px">
