--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 <div class="redimline">
 <h1 class="dstext" style="cursor:pointer">
-    <a href="https://discord.gg/dCWrRZknMB">Discord</a>
+    <sa href="https://discord.gg/dCWrRZknMB">Discord</sa>
     </h1>
 </div>
 <div class="menline"></div>
