--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -21,7 +21,7 @@
     </div>
     </div>
     <div class="tankbox" style="left: 620px;">
-        <img src="../Tanks/img/Sniper.img" class="entityimg">
+        <img src="../Tanks/img/Sniper.png" class="entityimg">
         <div class="tanknamebox">
         <h1 class="gameinfo">Sniper</h1>
         </div>
