--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./css/css.css">
     <link rel="stylesheet" href="./css/bg.css">
-    <title>Error:3333</title>
+    <title>Tekloro:wiki</title>
 </head>
 <body>
 <!--Tanks-->
