--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -28,7 +28,7 @@
         </div>
         <div class="tankbox" style="left: 940px;">
             <div class="tanknamebox">
-            <h1 class="gameinfo">Mach gun</h1>
+            <h1 class="gameinfo" style="font-size: 22px; top:-8px; left: 15px">Mach gun</h1>
             </div>
             </div>
             <div class="tankbox" style="left: 1210px;">
