--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -33,7 +33,7 @@
             </div>
             <div class="tankbox" style="left: 1210px;">
                 <div class="tanknamebox">
-                <h1 class="gameinfo">Flank guard</h1>
+                <h1 class="gameinfo" style="font-size: 20px; top:-8px; left: 15px">Flank guard</h1>
                 </div>
                 </div>
 
