--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -28,12 +28,12 @@
         </div>
         <div class="tankbox" style="left: 940px;">
             <div class="tanknamebox">
-            <h1 class="gameinfo" style="font-size: 22px; top:-8px; left: 15px">Mach gun</h1>
+            <center class="gameinfo" style="font-size: 22px; top:-8px; left: 15px">Mach gun</center>
             </div>
             </div>
             <div class="tankbox" style="left: 1210px;">
                 <div class="tanknamebox">
-                <h1 class="gameinfo" style="font-size: 20px; top:-8px; left: 15px">Flank guard</h1>
+                <center class="gameinfo" style="font-size: 20px; top:-8px; left: 15px">Flank guard</center>
                 </div>
                 </div>
 
