--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -33,7 +33,7 @@
             </div>
             <div class="tankbox" style="left: 1210px;">
                 <div class="tanknamebox">
-                <center class="gameinfo" style="font-size: 20px;">Flank guard</center>
+                <center class="gameinfo" style="font-size: 20px; text-align: center;">Flank guard</center>
                 </div>
                 </div>
 
