--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -27,63 +27,75 @@
         </div>
         </div>
         <div class="tankbox" style="left: 940px;">
+            <img src="../Tanks/img/Machine_Gun.png" class="entityimg">
             <div class="tanknamebox">
             <center class="gameinfo" style="font-size: 22px">Mach gun</center>
             </div>
             </div>
             <div class="tankbox" style="left: 1210px;">
+                <img src="../Tanks/img/Flank_Guard.png" class="entityimg">
                 <div class="tanknamebox">
                 <center class="gameinfo" style="font-size: 20px; text-align: center;">Flank guard</center>
                 </div>
                 </div>
 
                 <div class="tankbox" style="top: 400px;">
+                    <img src="../Tanks/img/Director.png" class="entityimg">
                     <div class="tanknamebox">
                     <h1 class="gameinfo">Director</h1>
                     </div>
                     </div>
                     <div class="tankbox" style="left: 300px; top: 400px;">
+                        <img src="../Tanks/img/Trapper.png" class="entityimg">
                         <div class="tanknamebox">
                         <h1 class="gameinfo">Trapper</h1>
                         </div>
                         </div>
                         <div class="tankbox" style="left: 620px; top: 400px;">
+                            <img src="../Tanks/img/Smasher.png" class="entityimg">
                             <div class="tanknamebox">
-                            <h1 class="gameinfo">smasher</h1>
+                            <h1 class="gameinfo">Smasher</h1>
                             </div>
                             </div>
                             <div class="tankbox" style="left: 940px; top: 400px;">
+                                <img src="../Tanks/img/Single.png" class="entityimg">
                                 <div class="tanknamebox">
                                 <h1 class="gameinfo">Single</h1>
                                 </div>
                                 </div>
                                 <div class="tankbox" style="left: 1210px; top: 400px;">
+                                    <img src="../Tanks/img/Switcheroo.png" class="entityimg">
                                     <div class="tanknamebox">
                                     <h1 class="gameinfo">Switcheroo</h1>
                                     </div>
                                     </div>
 
                                     <div class="tankbox" style="top: 670px;">
+                                        <img src="../Tanks/img/Healer.png" class="entityimg">
                                         <div class="tanknamebox">
                                         <h1 class="gameinfo">Healer</h1>
                                         </div>
                                         </div>
                                         <div class="tankbox" style="left: 300px; top: 670px;">
+                                            <img src="../Tanks/img/Twin_Flank.png" class="entityimg">
                                             <div class="tanknamebox">
                                             <h1 class="gameinfo">Double twin</h1>
                                             </div>
                                             </div>
                                             <div class="tankbox" style="left: 620px; top: 670px;">
+                                                <img src="../Tanks/img/Triple_Shot.png" class="entityimg">
                                                 <div class="tanknamebox">
                                                 <h1 class="gameinfo">Triple shot</h1>
                                                 </div>
                                                 </div>
                                                 <div class="tankbox" style="left: 940px; top: 670px;">
+                                                    <img src="../Tanks/img/Gunner.png" class="entityimg">
                                                     <div class="tanknamebox">
                                                     <h1 class="gameinfo">Gunner</h1>
                                                     </div>
                                                     </div>
                                                     <div class="tankbox" style="left: 1210px; top: 670px;">
+                                                        <img src="../Tanks/img/Hexa_Tank.png" class="entityimg">
                                                         <div class="tanknamebox">
                                                         <h1 class="gameinfo">Hexa tank</h1>
                                                         </div>
