--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="tankbox" style="top: 400px;">
-                    <img src="../Tanks/img/Director.png" class="entityimg">
+                    <img src="../Tanks/img/High_res_Director.png" class="entityimg">
                     <div class="tanknamebox">
                     <h1 class="gameinfo">Director</h1>
                     </div>
@@ -95,7 +95,7 @@
                                                     </div>
                                                     </div>
                                                     <div class="tankbox" style="left: 1210px; top: 670px;">
-                                                        <img src="../Tanks/img/Hexa_Tank.png" class="entityimg">
+                                                        <img src="../Tanks/img/Hexa-Tank.png" class="entityimg">
                                                         <div class="tanknamebox">
                                                         <h1 class="gameinfo">Hexa tank</h1>
                                                         </div>
