--- a/Tanks/Tanks.html
+++ b/Tanks/Tanks.html
@@ -107,7 +107,7 @@
 </div>
 <div class="menline"></div>
 <div class="menlineb">
-    <h1 class="arrastext" id="a" >A<h1 class="arrastext" id="r" style="left:30px">R</h1><h1 class="arrastext" id="rr" style="left:60px">R</h1><h1 class="arrastext" id="aa" style="left:90px">A</h1><h1 class="arrastext" id="s" style="left:120px">S</h1><h1 class="arrastext" id="." style="left:150px">.</h1><h1 class="arrastext" id="i" style="left:160px">I</h1><h1 class="arrastext" id="o" style="left:170px">O </h1><h1 class="arrastext" id="3" style="left:210px">3</h1><h1 class="arrastext" id="d" style="left:230px">D</h1></h1>
+     <h1 class="arrastext" id="a" >T<h1 class="arrastext" id="r" style="left:25px">E</h1><h1 class="arrastext" id="rr" style="left: 50px;">K</h1><h1 class="arrastext" id="aa" style="left:79px">L</h1><h1 class="arrastext" id="s" style="left:103px">O</h1><h1 class="arrastext" id="." style="left:134px">R</h1><h1 class="arrastext" id="i" style="left:163px">O</h1><h1 class="arrastext" id="o" style="left:193px">'</h1><h1 class="arrastext" id="3" style="left:202px">S</h1><h1 class="arrastext" id="d" style="left:230px">P</h1><h1 class="arrastext" id="dd" style="left:250px">J</h1></h1>
 <div class="butplay">
 <h1 class="textplay" id="play" style="">Play</h1>
 </div>
